completed with full backend

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -35,3 +35,42 @@
 .slick-prev, .slick-next {
 	display: none !important;
 }
+
+.leaflet-container {
+	width: 100%;
+	height: 100%;
+}
+
+#test {
+	background: #fff;
+	overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 13; 
+  /* start showing ellipsis when 3rd line is reached */
+  /* white-space: pre-wrap; */
+}
+
+  #card1, #card2, #card3, #card4 {
+	background-image: none;
+	background-position: -1000px 0px;
+	background-repeat: no-repeat;
+	transition: all 1s ease;
+  }
+
+  #card1:hover {
+	background-image: url('/assets/jyotish.jpeg');
+	background-position: 0px 0px;
+  }
+  #card2:hover {
+	background-image: url('/assets/resi-vastu.jpg');
+	background-position: 0px 0px;
+  }
+  #card3:hover {
+	background-image: url('/natural/yoga.jpg');
+	background-position: 0px 0px;
+  }
+  #card4:hover {
+	background-image: url('/assets/legalv2.png');
+	background-position: 0px 0px;
+  }
